# ML_Scratch

./: .gitignore  Build1.ipynb  README.md  pyproject.toml  requirements.txt
examples/: 01.py
pyml/: __init__.py  base.py
pyml/cluster/: __init__.py  _dbscan.py  _kmeans.py
pyml/decomposition/: __init__.py  _pca.py
pyml/ensemble/: __init__.py  _boosting.py  _forest.py  _gradient_boosting.py
pyml/linear_model/: __init__.py  _base.py
pyml/metrics/: __init__.py  _classification.py  _regression.py
pyml/model_selection/: __init__.py  _split.py
pyml/naive_bayes/: __init__.py  _gaussian.py  _multinomial.py
pyml/neighbors/: __init__.py  _knn.py
pyml/neural_network/: __init__.py  _activations.py  _base.py  _layers.py  _losses.py  _optimizers.py
pyml/preprocessing/: __init__.py  _encoders.py  _scalers.py
pyml/svm/: __init__.py  _base.py  _kernels.py
pyml/tree/: __init__.py  _tree.py
pyml/utils/: _math.py  _validation.py
tests/: test_activations.py  test_cluster.py  test_decomposition.py  test_ensemble.py  test_layers.py  test_linear_model.py  test_losses.py  test_metrics.py  test_model_selection.py  test_naive_bayes.py  test_neighbors.py  test_preprocessing.py  test_sequential.py  test_svm.py  test_tree.py  test_utils.py
