[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyml"
version = "1.0.0"
authors = [
    { name = "Gowtam Polamarasetti", email = "gowtampolamarasetti@gmail.com" },
]
description = "A comprehensive ML library built from scratch."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# List your runtime dependencies here
dependencies = [
    "numpy",
    "pytest",
    "scikit-learn",
    "pandas",
    "matplotlib"

]


[tool.setuptools.packages.find]
where = ["."]
